2005-11-23 Mikhail Khodjaiants
	Bug 117754: Stack frame can't display address.
	* CDebugModelPresentation.java

2005-10-19 Mikhail Khodjaiants
	Bug 113114: Expanding Modules View throws SWTError: No more handles.
	* ModulesView.java

2005-08-24 Mikhail Khodjaiants
	Bug 107208: toggle breakpoint with external sources doesn't work.
	* ToggleBreakpointAdapter.java

2005-07-26 Mikhail Khodjaiants
	Bug 105224: Two identical directory source container types.
	+ icons\obj16\directory_obj.gif
	* plugin.xml

2005-07-25 Alain Magloire
	Part fix for PR 100992: The signature was incorrect for structure/unions.
	
	* src/org/eclipse/cdt/debug/internal/ui/actions/ToggleBreakpointAdapter.java

2005-07-22 Alain Magloire
	Fix the copyright.

2005-07-14 Mikhail Khodjaiants
	Bug 103910: The modules view's icon is missing.
	+ icons/view16/memory_view.gif
	- icons/view16/sharedlibraries_view.gif

2005-07-12 Mikhail Khodjaiants
	Bug 103162: Module View: Missing context menu on detailed pane.
	* ModulesMessages.properties
	* ModulesView.java
	* plugin.xml

2005-07-08 Mikhail Khodjaiants
	Bug 79371: Setting breakpoints in the left hand side ruler of the disassembly view is sluggish.
	Asynchronous breakpoint handling.
	* DisassemblyEditorInput.java

2005-07-04 Mikhail Khodjaiants
	Removed the "IBreakpointTarget" interface.
	* DisassemblyEditorInput.java

2005-06-30 Mikhail Khodjaiants
	Bug 102386: double-clicking on a disassembly line in the disassembly view does not add a breakpoint.
	* ToggleBreakpointAdapter.java

2005-06-29 Mikhail Khodjaiants
	Bug 41725: I can't set a breakpoint in a function where I used attach source.
	Bug 45514: Breakpoints made is assembly view do not show in C view.
	+ DebugMarkerAnnotationModel.java
	+ DebugMarkerAnnotationModelFactory.java
	* ToggleBreakpointAdapter.java
	* DisassemblyEditorInput.java
	* plugin.xml

2005-06-29 Mikhail Khodjaiants
	Removed unused imports.
	* CBreapointWorkbencAdapterFactory.java

2005-06-25 Alain Magloire