@@ -1,3 +1,7 @@
+2006-01-16 Mikhail Khodjaiants
+	Bug 123702: Prevent Signals view from being automatically added to debugger perspective.
+	* plugin.xml
+
 2005-11-23 Mikhail Khodjaiants
 	Bug 117754: Stack frame can't display address.
 	* CDebugModelPresentation.java
